# skill-studio

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: roadmap.md
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/skill-manager/: AgentSkillConfigPanel.tsx  AppSettingsPanel.tsx  LibraryHomePanel.tsx  SettingsEntry.tsx  SettingsPanel.tsx  SkillDetailPanel.tsx  SkillDirectoryActions.tsx  SkillDirectoryConfig.tsx  SkillSidebar.tsx  VersionUpdatePanel.tsx
src/pages/: SkillManagerPage.tsx
src/skill-manager/: api.ts  catalogProfiles.test.ts  catalogProfiles.ts  i18n.ts  preferences.tsx  types.ts
