[package]
name = "skill-studio"
version = "0.1.0"
description = "Standalone Skill Manager app"
authors = ["Skill Studio"]
edition = "2021"

[lib]
name = "skill_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
