[package]
name = "skill-grove"
version = "0.6.0"
description = "Standalone Skill Manager app"
authors = ["Skill Grove"]
edition = "2021"

[lib]
name = "skill_grove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
zip = { version = "4.6", default-features = false }
